<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/ayah_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
		android:layout_above="@id/linearLayout"/>
	
    <RelativeLayout
		android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" 
		android:layout_alignParentBottom="true">
		
        <ImageButton
			android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
			app:srcCompat="@drawable/white_play_button"
            android:contentDescription="@string/play"
            android:onClick="onClickPlayButton"
			android:layout_alignParentStart="true"
			/>
			
        <TextView
			android:id="@+id/textView3"
			android:layout_width="170dp"
			android:layout_height="52dp"
            android:text="Abu Yusuf"
			android:background="@drawable/border"
			android:includeFontPadding="false"
			android:gravity="center"
            android:layout_toEndOf="@id/play_button"
			android:layout_alignTop="@id/play_button"/>

			
        <ImageButton
			android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
			app:srcCompat="@drawable/white_share_button"
            android:contentDescription="@string/share"
            android:onClick="onClickShareButton"
			android:layout_toEndOf="@id/textView3" />
			
        <ImageButton
			android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
			app:srcCompat="@drawable/white_next_button"
            android:contentDescription="@string/next"
            android:onClick="onClickNextButton"
			android:layout_toRightOf="@+id/share_button"/>
    </RelativeLayout>
	
</RelativeLayout>