<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.AyahTextsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Surah Name In Arabic English - Surah Name In Arabic - Translated Surah Name -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/english_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="English Name"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/arabic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="Arabic Name"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/english_translation_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="Translated Name"
                android:textAppearance="?android:textAppearanceMedium"/>

        </LinearLayout>



        <!-- Surah Number : Verse Number -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_braces"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/surah_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="2"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/colon"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/verse_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="42"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closing_braces"
                android:textAppearance="?android:textAppearanceMedium"/>

        </LinearLayout>

        <TextView
            android:id="@+id/arabic_verse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:text="Arabic Verse"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/english_translation_verse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:text="English Translation Verse"
            android:textAppearance="?android:textAppearanceMedium"/>


    </LinearLayout>



</ScrollView>