<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CountdownActivity">

    <FrameLayout
        android:id="@+id/ayah_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/previous"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dash"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/prev_surah_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/colon"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/prev_verse_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="42"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/next"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dash"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/next_surah_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="2"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/colon"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/next_verse_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="42"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_timerview_time"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:alpha="0.6"
            android:background="@drawable/circleshape_timerview"
            android:gravity="center"
            android:text="00:00"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

     </RelativeLayout>

</RelativeLayout>